A numbered list of user-visible changes to the product since the last
public release.